--- a/index.html
+++ b/index.html
@@ -1,53 +1,259 @@
-function showPreview() {
-  const selected = [...document.querySelectorAll("#home input:checked")]
-    .map(i => i.value)
-    .sort();
-  if (!selected.length) { showToast("請至少選一種線材"); return; }
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>手混線配色</title>
+<style>
+body { font-family:sans-serif; background:#f5f1ea; padding:16px; }
+.app { max-width:800px; width:100%; margin:auto; background:#fff; border-radius:20px; padding:16px; }
+header { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; }
 
-  currentSelected = [...selected];
-  savedSelection = [...selected];
-  currentKey = "MIX-" + selected.join("-");
+.yarns { display:grid; grid-template-columns:repeat(auto-fit, minmax(100px,1fr)); gap:12px; margin-top:12px; }
+.yarn { border:2px solid #eee; border-radius:12px; padding:6px; text-align:center; position:relative; cursor:pointer; transition: all 0.2s; }
+.yarn:hover { transform: scale(1.05); }
+.yarn.selected { border-color:#ff8f66; }
+.yarn img { width:100%; border-radius:8px; }
 
-  const slider = document.getElementById("previewSlider");
-  slider.innerHTML = "";
-
-  // 假設只顯示一個組合，也可以擴展為多組組合
-  const img = document.createElement("img");
-  img.src = `images/mix/${selected.join("-")}.jpg`;
-  img.onerror = () => { img.src="images/placeholder.jpg"; showToast("該混線圖片不存在"); };
-  img.classList.add("selected");
-  slider.appendChild(img);
-
-  document.getElementById("mixInfo").innerText = currentKey;
-
-  // 高亮選中線材
-  document.querySelectorAll(".yarn").forEach(y=>{
-    const input = y.querySelector("input");
-    if(input.checked) y.classList.add("selected");
-    else y.classList.remove("selected");
-  });
-
-  const preview = document.getElementById("previewContainer");
-  preview.classList.remove("hidden");
-  setTimeout(()=>preview.classList.add("show"),50);
+.number-box {
+  position:absolute;
+  top:4px;
+  left:4px;
+  width:20px;
+  height:20px;
+  border-radius:4px;
+  background:#ff8f66;
+  color:#fff;
+  font-size:12px;
+  text-align:center;
+  line-height:20px;
+  display:none;
 }
 
-// 取消預覽時移除高亮
+button { padding:10px 14px; border-radius:12px; border:none; font-size:16px; cursor:pointer; transition: all 0.2s; }
+button:hover { opacity:0.8; }
+.primary { background:#ff8f66; color:#fff; }
+.secondary { background:#444; color:#fff; }
+
+#previewContainer {
+  margin-top:20px;
+  border-top:1px solid #ddd;
+  padding-top:12px;
+  text-align:center;
+  opacity:0;
+  transform: translateY(20px);
+  transition: all 0.3s;
+  display:none;
+}
+#previewContainer.show { opacity:1; transform: translateY(0); display:block; }
+
+#previewContainer img { width:80px; height:80px; border-radius:8px; margin:0 4px; }
+
+#toast {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background:#444;
+  color:#fff;
+  padding:12px 20px;
+  border-radius:12px;
+  opacity:0;
+  transition: opacity 0.5s;
+  z-index:1000;
+}
+</style>
+</head>
+<body>
+<div class="app">
+<header>
+  <h3>🧶 手混線</h3>
+  <button type="button" id="cartBtn" onclick="showCart()">🛒 0</button>
+</header>
+
+<div id="home">
+  <input id="search" placeholder="搜尋線材或顏色"
+    oninput="filterYarns()"
+    style="width:100%;padding:10px;border-radius:10px;border:1px solid #ddd;">
+
+  <div class="yarns">
+    <label class="yarn" data-name="奶茶燕麥">
+      <div class="number-box"></div>
+      <input type="checkbox" value="A">
+      <img src="images/A.jpg">
+      <div>奶茶燕麥</div>
+    </label>
+
+    <label class="yarn" data-name="霧藍海鹽">
+      <div class="number-box"></div>
+      <input type="checkbox" value="B">
+      <img src="images/B.jpg">
+      <div>霧藍海鹽</div>
+    </label>
+
+    <label class="yarn" data-name="森林橄欖">
+      <div class="number-box"></div>
+      <input type="checkbox" value="C">
+      <img src="images/C.jpg">
+      <div>森林橄欖</div>
+    </label>
+
+    <label class="yarn" data-name="夕陽橘">
+      <div class="number-box"></div>
+      <input type="checkbox" value="D">
+      <img src="images/D.jpg">
+      <div>夕陽橘</div>
+    </label>
+
+    <label class="yarn" data-name="粉紅櫻花">
+      <div class="number-box"></div>
+      <input type="checkbox" value="E">
+      <img src="images/E.jpg">
+      <div>粉紅櫻花</div>
+    </label>
+
+    <label class="yarn" data-name="天空藍">
+      <div class="number-box"></div>
+      <input type="checkbox" value="F">
+      <img src="images/F.jpg">
+      <div>天空藍</div>
+    </label>
+  </div>
+</div>
+
+<div id="previewContainer">
+  <p id="mixInfo">混線預覽</p>
+  <div id="previewSlider"></div>
+  <button type="button" class="primary" onclick="addToCart()">加入購物車</button>
+  <button type="button" class="secondary" onclick="cancelPreview()">取消預覽</button>
+</div>
+
+<div id="toast"></div>
+</div>
+
+<script>
+let selectionOrder = [];
+let currentSelected = [];
+let savedSelection = [];
+let currentKey = "";
+
+// Toast 提示
+function showToast(msg){
+  const t=document.getElementById("toast");
+  t.innerText=msg;
+  t.style.opacity=1;
+  setTimeout(()=>t.style.opacity=0,1500);
+}
+
+// 搜尋過濾
+function filterYarns(){
+  const k = document.getElementById("search").value.toLowerCase() || "";
+  document.querySelectorAll(".yarn").forEach(y=>{
+    y.style.display = y.dataset.name.toLowerCase().includes(k) ? "block":"none";
+  });
+}
+
+// 勾選邏輯
+document.querySelectorAll(".yarn input").forEach(inp=>{
+  inp.addEventListener("change", ()=>{
+    const parent = inp.closest(".yarn");
+    const numberBox = parent.querySelector(".number-box");
+
+    if(inp.checked){
+      if(selectionOrder.length>=6){
+        inp.checked=false;
+        showToast("最多只能選6組線材");
+        return;
+      }
+      selectionOrder.push(inp.value);
+      numberBox.innerText = selectionOrder.indexOf(inp.value)+1;
+      numberBox.style.display="block";
+      parent.classList.add("selected");
+    } else {
+      const idx = selectionOrder.indexOf(inp.value);
+      if(idx>-1) selectionOrder.splice(idx,1);
+      numberBox.style.display="none";
+      parent.classList.remove("selected");
+      // 重新排列其他選項編號
+      document.querySelectorAll(".yarn input:checked").forEach(i=>{
+        const box = i.closest(".yarn").querySelector(".number-box");
+        box.innerText = selectionOrder.indexOf(i.value)+1;
+      });
+    }
+    updatePreview();
+  });
+});
+
+// 更新下方混線預覽
+function updatePreview(){
+  const preview=document.getElementById("previewSlider");
+  preview.innerHTML="";
+  if(selectionOrder.length===0) return;
+  selectionOrder.forEach(v=>{
+    const img=document.createElement("img");
+    img.src=`images/${v}.jpg`;
+    img.alt = v;
+    img.onerror=()=>img.src="images/placeholder.jpg";
+    preview.appendChild(img);
+  });
+  currentKey = "MIX-" + selectionOrder.join("-");
+  document.getElementById("mixInfo").innerText = currentKey;
+
+  const previewContainer = document.getElementById("previewContainer");
+  previewContainer.style.display="block";
+  setTimeout(()=>previewContainer.classList.add("show"),50);
+}
+
+// 取消預覽
 function cancelPreview(){
   const preview = document.getElementById("previewContainer");
   preview.classList.remove("show");
-  preview.addEventListener('transitionend',()=>{ preview.classList.add("hidden"); }, {once:true});
-  currentSelected = [...savedSelection];
+  preview.addEventListener('transitionend', e=>{
+    if(e.target===preview) preview.style.display="none";
+  }, {once:true});
 
-  document.querySelectorAll(".yarn").forEach(y=>{
-    y.classList.remove("selected");
+  // 恢復選擇狀態
+  selectionOrder = [...savedSelection];
+  document.querySelectorAll(".yarn input").forEach(i=>{
+    i.checked = selectionOrder.includes(i.value);
+    i.closest(".yarn").classList.toggle("selected", i.checked);
+    const box = i.closest(".yarn").querySelector(".number-box");
+    if(i.checked){
+      box.style.display="block";
+      box.innerText = selectionOrder.indexOf(i.value)+1;
+    } else {
+      box.style.display="none";
+    }
   });
 }
 
-// 當首頁勾選變化時即時高亮
-document.querySelectorAll(".yarn input").forEach(inp=>{
-  inp.addEventListener("change",()=>{
-    if(inp.checked) inp.closest(".yarn").classList.add("selected");
-    else inp.closest(".yarn").classList.remove("selected");
-  });
-});
+// 加入購物車
+function addToCart(){
+  if(selectionOrder.length===0){ showToast("請先選擇線材"); return; }
+  const cart=JSON.parse(localStorage.getItem("cart")||"[]");
+  const key="MIX-"+selectionOrder.join("-");
+  if(!cart.some(item=>item.key===key)){
+    cart.push({key:key, combo:[...selectionOrder], timestamp:Date.now()});
+  }
+  localStorage.setItem("cart",JSON.stringify(cart));
+  showToast("已加入購物車");
+  updateCartCount();
+
+  // 清空選擇
+  selectionOrder=[];
+  document.querySelectorAll(".yarn input").forEach(i=>i.checked=false);
+  document.querySelectorAll(".number-box").forEach(b=>b.style.display="none");
+  document.querySelectorAll(".yarn").forEach(y=>y.classList.remove("selected"));
+  updatePreview();
+}
+
+// 更新購物車數量
+function updateCartCount(){
+  const cartData=JSON.parse(localStorage.getItem("cart")||"[]");
+  document.getElementById("cartBtn").innerText=`🛒 ${cartData.length}`;
+}
+
+updateCartCount();
+</script>
+</body>
+</html>
